preparing config.rs for config file

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ edition = "2021"
 anyhow = "1.0.79"
 crossterm = "0.27.0"
 rand = "0.8.5"
-ratatui = "0.25.0"
+ratatui = { version = "0.25.0", features = ["serde"] }
+serde = { version = "1.0.197", features = ["derive"] }
+toml = "0.8.11"
