--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.79"
 crossterm = "0.27.0"
+lazy_static = "1.4.0"
 rand = "0.8.5"
 ratatui = { version = "0.25.0", features = ["serde"] }
+ron = "0.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
-toml = "0.8.11"
